added comments to my css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             About me - Work - Contact Me - Resume
         </header>
 
-        <div>
+        <div class="header">
             <img src="./assets/header-img.png"/>
         </div>
 
