edited a bit of the main body section

--- a/index.html
+++ b/index.html
@@ -14,32 +14,21 @@
             About me - Work - Contact Me - Resume
         </header>
 
-        <div class="header">
+        <div class="cover">
             <img src="./assets/header-img.png"/>
         </div>
 
-        <div class="wrapper">
-        <div class="box sidebar"><h2>About Me</h2></div>
-        <div class="box content">
-            Text text text <br>
-            Text text text <br>
-            Text text text <br>
-            Text text text <br>
-            Text text text <br>
-            Text text text <br>
-            Text text text <br>
-            Text text text <br>
-            Text text text <br>
-            Text text text <br>
-            Text text text <br>
-            Text text text <br></div>
+        <content>
+            <div class="wrapper">
+                <div class="box sidebar"><h2>About Me</h2></div>
+                <div class="box content">Text text text </div>
 
-        <div class="box sidebar"><h2>Work</h2></div>
-        <div class="box content">Text text text</div>
+                <div class="box sidebar"><h2>Work</h2></div>
+                <div class="box content">Text text text</div>
 
-        <div class="box sidebar"><h2>Contact Me</h2></div>
-        <div class="box content">Text text text</div>
-        </div>
-
+                <div class="box sidebar"><h2>Contact Me</h2></div>
+                <div class="box content">Text text text</div>
+            </div>
+        </content>
     </body>
 </html>
