added contact me info, added some flex

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 
     <body>
         <header>
-            <h1>Amy Snarr</h1>
-            About me - Work - Contact Me - Resume
+
+                <h1>Amy Snarr</h1>
+            <div>
+                <p>About Me</p>
+                <p>Work</p>
+                <p>Contact Me</p>
+                <p>Resume</p>
+            </div>
+
         </header>
 
         <div class="cover">
@@ -27,7 +34,11 @@
                 <div class="box content">Text text text</div>
 
                 <div class="box sidebar"><h2>Contact Me</h2></div>
-                <div class="box content">Text text text</div>
+                <div class="box content footer">
+                    <p>801-520-3022</p>
+                    <p>Linked In</p>
+                    <p>GitHub</p>
+                </div>
             </div>
         </content>
     </body>
