changed some css and html

--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
         <content>
             <div class="wrapper">
                 <div class="box sidebar"><h2>About Me</h2></div>
-                <div class="box content">Text text text </div>
+                <div class="box content">
+                    <p>Hello! I'm so bad at this</p>
+                </div>
 
                 <div class="box sidebar"><h2>Work</h2></div>
-                <div class="box content">Text text text</div>
+                <div class="box content">Flexbox layout</div>
 
-                <div class="box sidebar"><h2>Contact Me</h2></div>
+                <div class="box sidebar">
+                    <h2>Contact Me</h2>
+                </div>
                 <div class="box content footer">
                     <p>801-520-3022</p>
-                    <p>Linked In</p>
+                    <p>LinkedIn</p>
                     <p>GitHub</p>
                 </div>
             </div>
