added a bio in html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="wrapper">
                 <div class="box sidebar"><h2>About Me</h2></div>
                 <div class="box content">
-                    <p>Hello! I'm so bad at this</p>
+                    <p>Hello! I'm a software developer student, hoping to get into the software world. I have a BS in Math from Northern Arizona University and taught high school math for four years. I am now living in Herriman with my husband, two daughters, and two dogs. I like to crochet, cross stitch, and go on walks with my family.</p>
                 </div>
 
                 <div class="box sidebar"><h2>Work</h2></div>
