--- a/index.html
+++ b/index.html
@@ -26,14 +26,23 @@
         </div>
 
         <content>
-            <div class="wrapper">
-                <div class="box sidebar"><h2>About Me</h2></div>
+            <section class="wrapper">
+                <div class="box sidebar">
+                    <h2>About Me</h2></div>
                 <div class="box content">
                     <p>Hello! I'm a software developer student, hoping to get into the software world. I have a BS in Math from Northern Arizona University and taught high school math for four years. I am now living in Herriman with my husband, two daughters, and two dogs. I like to crochet, cross stitch, and go on walks with my family.</p>
                 </div>
 
-                <div class="box sidebar"><h2>Work</h2></div>
-                <div class="box content">Flexbox layout</div>
+                <div class="box sidebar">
+                    <h2>Work</h2>
+                </div>
+                <div class="box content work">
+                    <div class="card first"><img src="https://via.placeholder.com/200x100"></div>
+                    <div class="card"><img src="https://via.placeholder.com/200x100"></div>
+                    <div class="card"><img src="https://via.placeholder.com/200x100"></div>
+                    <div class="card"><img src="https://via.placeholder.com/200x100"></div>
+                    <div class="card"><img src="https://via.placeholder.com/200x100"></div>
+                </div>
 
                 <div class="box sidebar">
                     <h2>Contact Me</h2>
@@ -43,7 +52,7 @@
                     <p>LinkedIn</p>
                     <p>GitHub</p>
                 </div>
-            </div>
+            </section>
         </content>
     </body>
 </html>
