added links to header

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
                 <h1>Amy Snarr</h1>
             <div>
-                <p>About Me</p>
-                <p>Work</p>
-                <p>Contact Me</p>
-                <p>Resume</p>
+                <p><a href="#about-me">About Me</a></p>
+                <p><a href="#work">Work</a></p>
+                <p><a href="#contact-me">Contact Me</a></p>
+                <p><a href="#">Resume</a></p>
             </div>
 
         </header>
@@ -28,13 +28,13 @@
         <content>
             <section class="wrapper">
                 <div class="box sidebar">
-                    <h2>About Me</h2></div>
+                    <h2 id="about-me">About Me</h2></div>
                 <div class="box content">
                     <p>Hello! I'm a software developer student, hoping to get into the software world. I have a BS in Math from Northern Arizona University and taught high school math for four years. I am now living in Herriman with my husband, two daughters, and two dogs. I like to crochet, cross stitch, and go on walks with my family.</p>
                 </div>
 
                 <div class="box sidebar">
-                    <h2>Work</h2>
+                    <h2 id="work">Work</h2>
                 </div>
                 <div class="box content work">
                     <div class="card first"><img src="https://via.placeholder.com/200x100"></div>
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="box sidebar">
-                    <h2>Contact Me</h2>
+                    <h2 id="contact-me">Contact Me</h2>
                 </div>
                 <div class="box content footer">
                     <p>801-520-3022</p>
