--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <div class="box sidebar">
                     <h2 id="about-me">About Me</h2></div>
                 <div class="box content">
+                    <p><img src="./assets/profile.PNG" id="profile-img"/></p>
                     <p>Hello! I'm a software developer student, hoping to get into the software world. I have a BS in Math from Northern Arizona University and taught high school math for four years. I am now living in Herriman with my husband, two daughters, and two dogs. I like to crochet, cross stitch, and go on walks with my family.</p>
                 </div>
 
