having issues now

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./assets/reset.css">
-        <link rel="stylesheet" href="./assets/style.css">
+        <link rel="stylesheet" href="./assets/css/reset.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
         <title>Portfolio</title>
     </head>
 
@@ -22,7 +22,7 @@
         </header>
 
         <div class="cover">
-            <img src="./assets/header-img.png"/>
+            <img src="./assets/images/header-img.png"/>
         </div>
 
         <content>
@@ -30,7 +30,7 @@
                 <div class="box sidebar">
                     <h2 id="about-me">About Me</h2></div>
                 <div class="box content">
-                    <p><img src="./assets/profile.PNG" id="profile-img"/></p>
+                    <p><img src="./assets/images/profile.PNG" id="profile-img"/></p>
                     <p>Hello! I'm a software developer student, hoping to get into the software world. I have a BS in Math from Northern Arizona University and taught high school math for four years. I am now living in Herriman with my husband, two daughters, and two dogs. I like to crochet, cross stitch, and go on walks with my family.</p>
                 </div>
 
@@ -38,11 +38,14 @@
                     <h2 id="work">Work</h2>
                 </div>
                 <div class="box content work">
-                    <div class="card first"><img src="https://via.placeholder.com/200x100"></div>
-                    <div class="card"><img src="https://via.placeholder.com/200x100"></div>
-                    <div class="card"><img src="https://via.placeholder.com/200x100"></div>
-                    <div class="card"><img src="https://via.placeholder.com/200x100"></div>
-                    <div class="card"><img src="https://via.placeholder.com/200x100"></div>
+                    <div class="card first">
+                        <p class="first-txt">Hey</p>
+                        <p><a href="https://sifrult.github.io/Horiseon/">Link</a></p>
+                    </div>
+                    <div class="card"><img src="https://via.placeholder.com/200x100"/></div>
+                    <div class="card"><img src="https://via.placeholder.com/200x100"/></div>
+                    <div class="card"><img src="https://via.placeholder.com/200x100"/></div>
+                    <div class="card"><img src="https://via.placeholder.com/200x100"/></div>
                 </div>
 
                 <div class="box sidebar">
