--- a/index.html
+++ b/index.html
@@ -9,17 +9,62 @@
     </head>
 
     <body>
-        <header>
-
+        <content class="wrapper">
+            <section class="box header">
                 <h1>Amy Snarr</h1>
-            <div>
-                <p><a href="#about-me">About Me</a></p>
-                <p><a href="#work">Work</a></p>
-                <p><a href="#contact-me">Contact Me</a></p>
-                <p><a href="#">Resume</a></p>
-            </div>
+                <div>
+                    <p><a href="#about-me">About Me</a></p>
+                    <p><a href="#work">Work</a></p>
+                    <p><a href="#contact-me">Contact Me</a></p>
+                    <p><a href="#">Resume</a></p>
+                </div>
+            </section>
 
-        </header>
+            <section class="box about-me">
+                <section class="sidebar">
+                    <h2 id="about-me">About Me</h2>
+                </section>
+
+                <section class="content">
+                    <p><img src="./assets/images/profile.PNG" id="profile-img"/></p>
+                    <p>Hello! I'm a software developer student, hoping to get into the software world. I have a BS in Math from Northern Arizona University and taught high school math for four years. I am now living in Herriman with my husband, two daughters, and two dogs. I like to crochet, cross stitch, and go on walks with my family.</p>
+                </section>
+            </section>
+
+            <section class="box work">
+                <section class="sidebar">
+                    <h2 id="work">Work</h2>
+                </section>
+
+                <section class="content">
+                    <div class="card first">
+                        <p class="first-txt">Hey blasfhkbaerk j,bs
+                        </p>
+                        <p><a href="https://sifrult.github.io/Horiseon/">Link</a></p>
+                    </div>
+                    <div class="card"><img src="https://via.placeholder.com/200x100"/></div>
+                    <div class="card"><img src="https://via.placeholder.com/200x100"/></div>
+                    <div class="card"><img src="https://via.placeholder.com/200x100"/></div>
+                    <div class="card"><img src="https://via.placeholder.com/200x100"/></div>
+
+                </section>
+            </section>
+
+            <section class="box contact">
+                <section class="sidebar">
+                    <h2 id="contact-me">Contact Me</h2>
+                </section>
+
+                <section class="content">
+                    <p>801-520-3022</p>
+                    <p>LinkedIn</p>
+                    <p>GitHub</p>
+
+                </section>
+            </section>
+        </content>
+<!--
+
 
         <div class="cover">
             <img src="./assets/images/header-img.png"/>
@@ -39,7 +84,8 @@
                 </div>
                 <div class="box content work">
                     <div class="card first">
-                        <p class="first-txt">Hey</p>
+                        <p class="first-txt">Hey blasfhkbaerk j,bs
+                        </p>
                         <p><a href="https://sifrult.github.io/Horiseon/">Link</a></p>
                     </div>
                     <div class="card"><img src="https://via.placeholder.com/200x100"/></div>
@@ -58,5 +104,7 @@
                 </div>
             </section>
         </content>
+
+    -->
     </body>
 </html>
