formatted a bit of the header

--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
         <content class="wrapper">
             <section class="box header">
                 <h1>Amy Snarr</h1>
-                <div>
+                <div class="header-links">
                     <p><a href="#about-me">About Me</a></p>
                     <p><a href="#work">Work</a></p>
                     <p><a href="#contact-me">Contact Me</a></p>
                     <p><a href="#">Resume</a></p>
                 </div>
+            </section>
+
+            <section class="box header-img">
+                 <p>Subtitle</p>
             </section>
 
             <section class="box about-me">
@@ -65,10 +69,6 @@
         </content>
 <!--
 
-
-        <div class="cover">
-            <img src="./assets/images/header-img.png"/>
-        </div>
 
         <content>
             <section class="wrapper">
