finished formatting header and footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </section>
 
             <section class="box header-img">
-                 <p>Subtitle</p>
+                 <p>Welcome!</p>
             </section>
 
             <section class="box about-me">
@@ -59,7 +59,7 @@
                     <h2 id="contact-me">Contact Me</h2>
                 </section>
 
-                <section class="content">
+                <section class="content footer">
                     <p>801-520-3022</p>
                     <p>LinkedIn</p>
                     <p>GitHub</p>
