--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 <section class="content">
                     <p><img src="./assets/images/profile.PNG" id="profile-img"/></p>
-                    <p>Hello! I'm a software developer student, hoping to get into the software world. I have a BS in Math from Northern Arizona University and taught high school math for four years. I am now living in Herriman with my husband, two daughters, and two dogs. I like to crochet, cross stitch, and go on walks with my family.</p>
+                    <p id="bio">Hello! I'm a software developer student, hoping to get into the software world. I have a BS in Math from Northern Arizona University and taught high school math for four years. I am now living in Herriman with my husband, two daughters, and two dogs. I like to crochet, cross stitch, and go on walks with my family.</p>
                 </section>
             </section>
 
