styled works section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
             </section>
 
-            <section class="box header-img">
+            <section class="box header-img flex-end">
                  <p>Welcome!</p>
             </section>
 
@@ -41,15 +41,31 @@
                 </section>
 
                 <section class="content">
-                    <div class="card first">
-                        <p class="first-txt">Hey blasfhkbaerk j,bs
+                    <div class="card first flex-end">
+                        <p class="card-link">
+                            <a href="https://sifrult.github.io/Horiseon/">Horiseon <br> HTML/CSS</a>
                         </p>
-                        <p><a href="https://sifrult.github.io/Horiseon/">Link</a></p>
                     </div>
-                    <div class="card"><img src="https://via.placeholder.com/200x100"/></div>
-                    <div class="card"><img src="https://via.placeholder.com/200x100"/></div>
-                    <div class="card"><img src="https://via.placeholder.com/200x100"/></div>
-                    <div class="card"><img src="https://via.placeholder.com/200x100"/></div>
+                    <div class="card card-a flex-end">
+                        <p class="card-link">
+                            <a href="#">Name <br> Languages</a>
+                        </p>
+                    </div>
+                    <div class="card card-b flex-end">
+                        <p class="card-link">
+                            <a href="#">Name <br> Languages</a>
+                        </p>
+                    </div>
+                    <div class="card card-c flex-end">
+                        <p class="card-link">
+                            <a href="#">Name <br> Languages</a>
+                        </p>
+                    </div>
+                    <div class="card card-d flex-end">
+                        <p class="card-link">
+                            <a href="#">Name <br> Languages</a>
+                        </p>
+                    </div>
 
                 </section>
             </section>
