changed media for header links

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <content class="wrapper">
             <section class="box header">
                 <h1>Amy Snarr</h1>
-                <div class="header-links">
-                    <p><a href="#about-me">About Me</a></p>
-                    <p><a href="#work">Work</a></p>
-                    <p><a href="#contact-me">Contact Me</a></p>
-                    <p><a href="#">Resume</a></p>
-                </div>
+                    <ul class="header-links">
+                        <li><a href="#about-me">About Me</a></li>
+                        <li><a href="#work">Work</a></li>
+                        <li><a href="#contact-me">Contact Me</a></li>
+                        <li><a href="#">Resume</a></li>
+                    </ul>
             </section>
 
             <section class="box header-img flex-end">
