changed media content sections

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </section>
 
                 <section class="content">
-                    <p><img src="./assets/images/profile.PNG" id="profile-img"/></p>
-                    <p id="bio">Hello! I'm a software developer student, hoping to get into the software world. I have a BS in Math from Northern Arizona University and taught high school math for four years. I am now living in Herriman with my husband, two daughters, and two dogs. I like to crochet, cross stitch, and go on walks with my family.</p>
+                    <img src="./assets/images/profile.PNG" id="profile-img"/>
+                    <p>Hello! I'm a software developer student, hoping to get into the software world. I have a BS in Math from Northern Arizona University and taught high school math for four years. I am now living in Herriman with my husband, two daughters, and two dogs. I like to crochet, cross stitch, and go on walks with my family.</p>
                 </section>
             </section>
 
@@ -76,10 +76,11 @@
                 </section>
 
                 <section class="content footer">
-                    <p>801-520-3022</p>
-                    <p>LinkedIn</p>
-                    <p>GitHub</p>
-
+                    <ul>
+                        <li>801-520-3022</li>
+                        <li>LinkedIn</li>
+                        <li>GitHub</li>
+                    </ul>
                 </section>
             </section>
         </content>
