adjusted footer links

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <section class="content">
                     <div class="card first flex-end">
                         <p class="card-link">
-                            <a href="https://sifrult.github.io/Horiseon/">Horiseon <br> HTML/CSS</a>
+                            <a href="https://sifrult.github.io/Horiseon/" target="_blank">Horiseon <br> HTML/CSS</a>
                         </p>
                     </div>
                     <div class="card card-a flex-end">
@@ -76,7 +76,7 @@
                 </section>
 
                 <section class="content footer">
-                    <ul>
+                    <ul class="footer-links">
                         <li>801-520-3022</li>
                         <li>LinkedIn</li>
                         <li>GitHub</li>
