added last links, edited link look for footer

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 <section class="content footer">
                     <ul class="footer-links">
                         <li>801-520-3022</li>
-                        <li>LinkedIn</li>
-                        <li>GitHub</li>
+                        <li><a href="https://www.linkedin.com/in/amy-snarr-504326168/" target="_blank">LinkedIn</a></li>
+                        <li><a href="https://github.com/sifrult" target="_blank">Github</a></li>
                     </ul>
                 </section>
             </section>
